# Application

./: CMakeLists.txt  README.md
include/: Button.h  FinishState.h  MainWindow.h  Reel.h  Slot.h  SlotMachine.h  SpinState.h  State.h  StopButton.h  WaitState.h
src/: Button.cpp  FinishState.cpp  MainWindow.cpp  Reel.cpp  Slot.cpp  SlotMachine.cpp  SpinState.cpp  WaitState.cpp  main.cpp
